Correçao dos metodos de cadastro e busca