@@ -1,6 +1,5 @@
 package com.jedu_lima.EstoqueAPI.service.impl;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.swing.JFrame;
@@ -11,7 +10,6 @@ import javax.swing.table.DefaultTableModel;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jedu_lima.EstoqueAPI.client.ClientApi;
 import com.jedu_lima.EstoqueAPI.entity.ProdutoCadastro;
-import com.jedu_lima.EstoqueAPI.view.InterfaceProdutos;
 
 public class UiService extends JFrame {
 	private static final long serialVersionUID = 1L;
@@ -31,37 +29,37 @@ public class UiService extends JFrame {
 					String json = objectMapper.writeValueAsString(produto);
 
 					clientApi.postDadosParaApi(url, json);
-					buscarDadosDaApi(url, (InterfaceProdutos) callback);
+					buscarDadosDaApi(url, callback);
 				} catch (Exception e) {
 					e.printStackTrace();
 				}
 			}
 		}).start();
 	}
+	
+	  public void buscarDadosDaApi(String url, UiServiceCallback callback) {
+	        new Thread(new Runnable() {
+	            @Override
+	            public void run() {
+	                try {
+	                    ClientApi clientApi = new ClientApi();
+	                    String data = clientApi.getDadosDaApi(url);
+	                    ObjectMapper objectMapper = new ObjectMapper();
+	                    ProdutoCadastro[] produtos = objectMapper.readValue(data, ProdutoCadastro[].class);
 
-	public void buscarDadosDaApi(String url, InterfaceProdutos interfaceProdutos) {
-		new Thread(new Runnable() {
-			@Override
-			public void run() {
-				try {
-					ClientApi clientApi = new ClientApi();
-					String data = clientApi.getDadosDaApi(url);
-					ObjectMapper objectMapper = new ObjectMapper();
-					ProdutoCadastro[] produtos = objectMapper.readValue(data, ProdutoCadastro[].class);
-					List<ProdutoCadastro> listaDeProdutos = Arrays.asList(produtos);
+	                    SwingUtilities.invokeLater(new Runnable() {
+	                        @Override
+	                        public void run() {
+	                            callback.onProdutosFetched(List.of(produtos));
+	                        }
+	                    });
+	                } catch (Exception e) {
+	                    e.printStackTrace(); 
+	                }
+	            }
+	        }).start();
+	    }
 
-					SwingUtilities.invokeLater(new Runnable() {
-						@Override
-						public void run() {
-							interfaceProdutos.onProdutosFetched(listaDeProdutos);
-						}
-					});
-				} catch (Exception e) {
-					e.printStackTrace();
-				}
-			}
-		}).start();
-	}
 
 	public void atualizarTabela(JTable table, List<ProdutoCadastro> listaDeProdutos) {
 		String[] colunas = { "ID", "Código De Barras", "Nome", "Preço De Compra", "Quantidade", "Preço De Venda","Porcentagem" };
